--- a/index.css
+++ b/index.css
@@ -1,72 +1,3 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-}
-
-body{
-    height: 100%;
-    width: 100%;
-}
-.Header{
-    height: 18vh;
-    width: 100%;
-    border: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.Logo-container{
-    height: 10vh;
-    width: 10vw;
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-img.logo{
-    height: 15vh;
-    width: 80%;
-    border: none;
-    border-radius: 50px;
-}
-.Nav-items ul{
-   display: flex;
-   gap: 5vw;
-   padding: 4vw ;
-   list-style-type: none;
-
-}
-
-.search{
-    padding: 2vw;
-}
-.res-Container{
-  height: 100vh;
-  width: 100%;
-  background-color: antiquewhite;
-  padding: 2vw;
-}
-
-.res-card{
-    background: radial-gradient(circle, red, rgb(124, 124, 210), rgb(67, 67, 2));
-    width: 13vw;
-    height: 38vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 10px;
-    border-radius: 15px;
-}
-.res-card:hover{
-    border: 2px solid rgb(4, 4, 7);
-    padding: 1vw;
-}
-.resimg{
-    height: 26vh;
-    width: 12vw;
-    object-fit: cover;
-    padding: 2vh;
-    border-radius: 29px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
